nettoyage du css

--- a/css/0.css
+++ b/css/0.css
@@ -1,76 +1,573 @@
-body { background: #fcf3d2 none repeat-x scroll center top; }
-.wb_sbg { background: transparent url("../gallery/dad763187c3171ad64b3e88d1d511a44.jpg") repeat-x scroll center bottom; }
-body, .wb_sbg { min-width: 992px; min-height: 2530px; }
-.root { width: 992px; height: 2530px; overflow: visible; }
-#wb_element_instance119 { left: 498px; top: 10px; min-width: 484px; width: 484px; min-height: 40px; height: 40px; display: block; z-index: 194; }
-#wb_element_instance119 ul { background: transparent none repeat scroll left top; border: 1px none #000000; }
-#wb_element_instance119, #wb_element_instance119 ul { text-align: right; }
-#wb_element_instance119 ul ul { background: #2e2e2e none repeat scroll left top; }
-#wb_element_instance119 li { margin: 10px 10px 10px 10px; }
-#wb_element_instance119 li a { text-transform: uppercase; border: 0px none #000000; padding: 5px 10px 5px 10px; font: normal normal 13px Georgia,serif; text-decoration: none; color: #8b4828; line-height: 15px; background: transparent none repeat scroll left top; }
-#wb_element_instance119 li:hover > a, #wb_element_instance119 li:focus > a { border: 0px none #000000; font: normal normal 13px Georgia,serif; text-decoration: none; color: #00c2a2; line-height: 15px; background: transparent none no-repeat scroll center top; }
-#wb_element_instance119 li.active > a { border: 0px none #000000; font: normal normal 13px Georgia,serif; text-decoration: none; color: #00c292; line-height: 15px; background: transparent none no-repeat scroll center top; }
-#wb_element_instance120 { left: 0px; top: 0px; min-width: 360px; width: 360px; min-height: 110px; height: 110px; display: block; z-index: 182; }
-#wb_element_instance120 > div { width: 360px; height: 110px; background: transparent; border: 5px none #C0C0C0; opacity: 0.3; border-radius: 0px 0px 0px 0px; -moz-border-radius: 0px 0px 0px 0px; -webkit-border-radius: 0px 0px 0px 0px; }
-#wb_element_instance121 { left: 27px; top: 17px; min-width: 300px; width: 300px; min-height: 84px; height: 84px; display: block; z-index: 186; }
-#wb_element_instance122 { left: 900px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; z-index: 180; }
-#wb_element_instance122 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
-#wb_element_instance123 { left: 850px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; z-index: 181; }
-#wb_element_instance123 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
-#wb_element_instance124 { left: 50px; top: 10px; min-width: 530px; width: 530px; min-height: 30px; height: 30px; display: block; z-index: 182; }
-#wb_element_instance125 { left: 670px; top: 10px; min-width: 110px; width: 110px; min-height: 24px; height: 24px; display: block; z-index: 183; }
-#wb_element_instance126 { left: 950px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; z-index: 184; }
-#wb_element_instance126 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
-#wb_element_instance127 { left: 0px; top: 130px; display: block; z-index: 9000; }
-#wb_element_instance128 { left: 0px; top: 150px; display: block; z-index: 9999; }
-
-@media (min-width: 768px) {
-	body, .wb_sbg { min-width: 992px; min-height: 2530px; }
-	.root { width: 992px; height: 2530px; overflow: visible; }
-	#wb_element_instance119 { left: 498px; top: 10px; min-width: 484px; width: 484px; min-height: 40px; height: 40px; display: block; }
-	#wb_element_instance120 { left: 0px; top: 0px; min-width: 360px; width: 360px; min-height: 110px; height: 110px; display: block; }
-	#wb_element_instance120 > div { width: 360px; height: 110px; }
-	#wb_element_instance121 { left: 27px; top: 17px; min-width: 300px; width: 300px; min-height: 84px; height: 84px; display: block; }
-	#wb_element_instance122 { left: 900px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-	#wb_element_instance122 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
-	#wb_element_instance123 { left: 850px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-	#wb_element_instance123 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
-	#wb_element_instance124 { left: 50px; top: 10px; min-width: 530px; width: 530px; min-height: 30px; height: 30px; display: block; }
-	#wb_element_instance125 { left: 670px; top: 10px; min-width: 110px; width: 110px; min-height: 24px; height: 24px; display: block; }
-	#wb_element_instance126 { left: 950px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-	#wb_element_instance126 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
+body {
+    background: #fcf3d2 none repeat-x scroll center top;
 }
 
-@media (min-width: 992px) {
-	body, .wb_sbg { min-width: 992px; min-height: 2530px; }
-	.root { width: 992px; height: 2530px; overflow: visible; }
-	#wb_element_instance119 { left: 498px; top: 10px; min-width: 484px; width: 484px; min-height: 40px; height: 40px; display: block; }
-	#wb_element_instance120 { left: 0px; top: 0px; min-width: 360px; width: 360px; min-height: 110px; height: 110px; display: block; }
-	#wb_element_instance120 > div { width: 360px; height: 110px; }
-	#wb_element_instance121 { left: 27px; top: 17px; min-width: 300px; width: 300px; min-height: 84px; height: 84px; display: block; }
-	#wb_element_instance122 { left: 900px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-	#wb_element_instance122 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
-	#wb_element_instance123 { left: 850px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-	#wb_element_instance123 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
-	#wb_element_instance124 { left: 50px; top: 10px; min-width: 530px; width: 530px; min-height: 30px; height: 30px; display: block; }
-	#wb_element_instance125 { left: 670px; top: 10px; min-width: 110px; width: 110px; min-height: 24px; height: 24px; display: block; }
-	#wb_element_instance126 { left: 950px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-	#wb_element_instance126 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
+.wb_sbg {
+    background: transparent url("../gallery/dad763187c3171ad64b3e88d1d511a44.jpg") repeat-x scroll center bottom;
 }
 
-@media (min-width: 1200px) {
-	body, .wb_sbg { min-width: 992px; min-height: 2530px; }
-	.root { width: 992px; height: 2530px; overflow: visible; }
-	#wb_element_instance119 { left: 498px; top: 10px; min-width: 484px; width: 484px; min-height: 40px; height: 40px; display: block; }
-	#wb_element_instance120 { left: 0px; top: 0px; min-width: 360px; width: 360px; min-height: 110px; height: 110px; display: block; }
-	#wb_element_instance120 > div { width: 360px; height: 110px; }
-	#wb_element_instance121 { left: 27px; top: 17px; min-width: 300px; width: 300px; min-height: 84px; height: 84px; display: block; }
-	#wb_element_instance122 { left: 900px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-	#wb_element_instance122 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
-	#wb_element_instance123 { left: 850px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-	#wb_element_instance123 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
-	#wb_element_instance124 { left: 50px; top: 10px; min-width: 530px; width: 530px; min-height: 30px; height: 30px; display: block; }
-	#wb_element_instance125 { left: 670px; top: 10px; min-width: 110px; width: 110px; min-height: 24px; height: 24px; display: block; }
-	#wb_element_instance126 { left: 950px; top: 27px; min-width: 32px; width: 32px; min-height: 32px; height: 32px; display: block; }
-	#wb_element_instance126 img { width: 32px; height: 32px; position: static; left: 0px; top: 0px; }
+body,
+.wb_sbg {
+    min-height: 2530px;
+    min-width: 992px;
+}
+
+.root {
+    width: 992px;
+    height: 2530px;
+    overflow: visible;
+}
+
+#wb_element_instance119 {
+    display: block;
+    z-index: 194;
+    top: 10px;
+    left: 498px;
+    width: 484px;
+    height: 40px;
+    min-height: 40px;
+    min-width: 484px;
+}
+
+#wb_element_instance119 ul {
+    border: 1px none #000000;
+    background: transparent none repeat scroll left top;
+}
+
+#wb_element_instance119,
+#wb_element_instance119 ul {
+    text-align: right;
+}
+
+#wb_element_instance119 ul ul {
+    background: #2e2e2e none repeat scroll left top;
+}
+
+#wb_element_instance119 li {
+    margin: 10px 10px 10px 10px;
+}
+
+#wb_element_instance119 li a {
+    padding: 5px 10px 5px 10px;
+    border: 0 none #000000;
+    text-decoration: none;
+    text-transform: uppercase;
+    font: normal normal 13px Georgia,serif;
+    line-height: 15px;
+    color: #8b4828;
+    background: transparent none repeat scroll left top;
+}
+
+#wb_element_instance119 li:hover > a,
+#wb_element_instance119 li:focus > a {
+    border: 0 none #000000;
+    text-decoration: none;
+    font: normal normal 13px Georgia,serif;
+    line-height: 15px;
+    color: #00c2a2;
+    background: transparent none no-repeat scroll center top;
+}
+
+#wb_element_instance119 li.active > a {
+    border: 0 none #000000;
+    text-decoration: none;
+    font: normal normal 13px Georgia,serif;
+    line-height: 15px;
+    color: #00c292;
+    background: transparent none no-repeat scroll center top;
+}
+
+#wb_element_instance120 {
+    display: block;
+    z-index: 182;
+    top: 0;
+    left: 0;
+    width: 360px;
+    height: 110px;
+    min-height: 110px;
+    min-width: 360px;
+}
+
+#wb_element_instance120 > div {
+    width: 360px;
+    height: 110px;
+    border: 5px none #C0C0C0;
+    -webkit-border-radius: 0 0 0 0;
+    -moz-border-radius: 0 0 0 0;
+    border-radius: 0 0 0 0;
+    opacity: 0.3;
+    background: transparent;
+}
+
+#wb_element_instance121 {
+    display: block;
+    z-index: 186;
+    top: 17px;
+    left: 27px;
+    width: 300px;
+    height: 84px;
+    min-height: 84px;
+    min-width: 300px;
+}
+
+#wb_element_instance122 {
+    display: block;
+    z-index: 180;
+    top: 27px;
+    left: 900px;
+    width: 32px;
+    height: 32px;
+    min-height: 32px;
+    min-width: 32px;
+}
+
+#wb_element_instance122 img {
+    position: static;
+    top: 0;
+    left: 0;
+    width: 32px;
+    height: 32px;
+}
+
+#wb_element_instance123 {
+    display: block;
+    z-index: 181;
+    top: 27px;
+    left: 850px;
+    width: 32px;
+    height: 32px;
+    min-height: 32px;
+    min-width: 32px;
+}
+
+#wb_element_instance123 img {
+    position: static;
+    top: 0;
+    left: 0;
+    width: 32px;
+    height: 32px;
+}
+
+#wb_element_instance124 {
+    display: block;
+    z-index: 182;
+    top: 10px;
+    left: 50px;
+    width: 530px;
+    height: 30px;
+    min-height: 30px;
+    min-width: 530px;
+}
+
+#wb_element_instance125 {
+    display: block;
+    z-index: 183;
+    top: 10px;
+    left: 670px;
+    width: 110px;
+    height: 24px;
+    min-height: 24px;
+    min-width: 110px;
+}
+
+#wb_element_instance126 {
+    display: block;
+    z-index: 184;
+    top: 27px;
+    left: 950px;
+    width: 32px;
+    height: 32px;
+    min-height: 32px;
+    min-width: 32px;
+}
+
+#wb_element_instance126 img {
+    position: static;
+    top: 0;
+    left: 0;
+    width: 32px;
+    height: 32px;
+}
+
+#wb_element_instance127 {
+    display: block;
+    z-index: 9000;
+    top: 130px;
+    left: 0;
+}
+
+#wb_element_instance128 {
+    display: block;
+    z-index: 9999;
+    top: 150px;
+    left: 0;
+}
+
+@media(min-width:768px) {
+    body,
+    .wb_sbg {
+        min-height: 2530px;
+        min-width: 992px;
+    }
+
+    .root {
+        width: 992px;
+        height: 2530px;
+        overflow: visible;
+    }
+
+    #wb_element_instance119 {
+        display: block;
+        top: 10px;
+        left: 498px;
+        width: 484px;
+        height: 40px;
+        min-height: 40px;
+        min-width: 484px;
+    }
+
+    #wb_element_instance120 {
+        display: block;
+        top: 0;
+        left: 0;
+        width: 360px;
+        height: 110px;
+        min-height: 110px;
+        min-width: 360px;
+    }
+
+    #wb_element_instance120 > div {
+        width: 360px;
+        height: 110px;
+    }
+
+    #wb_element_instance121 {
+        display: block;
+        top: 17px;
+        left: 27px;
+        width: 300px;
+        height: 84px;
+        min-height: 84px;
+        min-width: 300px;
+    }
+
+    #wb_element_instance122 {
+        display: block;
+        top: 27px;
+        left: 900px;
+        width: 32px;
+        height: 32px;
+        min-height: 32px;
+        min-width: 32px;
+    }
+
+    #wb_element_instance122 img {
+        position: static;
+        top: 0;
+        left: 0;
+        width: 32px;
+        height: 32px;
+    }
+
+    #wb_element_instance123 {
+        display: block;
+        top: 27px;
+        left: 850px;
+        width: 32px;
+        height: 32px;
+        min-height: 32px;
+        min-width: 32px;
+    }
+
+    #wb_element_instance123 img {
+        position: static;
+        top: 0;
+        left: 0;
+        width: 32px;
+        height: 32px;
+    }
+
+    #wb_element_instance124 {
+        display: block;
+        top: 10px;
+        left: 50px;
+        width: 530px;
+        height: 30px;
+        min-height: 30px;
+        min-width: 530px;
+    }
+
+    #wb_element_instance125 {
+        display: block;
+        top: 10px;
+        left: 670px;
+        width: 110px;
+        height: 24px;
+        min-height: 24px;
+        min-width: 110px;
+    }
+
+    #wb_element_instance126 {
+        display: block;
+        top: 27px;
+        left: 950px;
+        width: 32px;
+        height: 32px;
+        min-height: 32px;
+        min-width: 32px;
+    }
+
+    #wb_element_instance126 img {
+        position: static;
+        top: 0;
+        left: 0;
+        width: 32px;
+        height: 32px;
+    }
+}
+
+@media(min-width:992px) {
+    body,
+    .wb_sbg {
+        min-height: 2530px;
+        min-width: 992px;
+    }
+
+    .root {
+        width: 992px;
+        height: 2530px;
+        overflow: visible;
+    }
+
+    #wb_element_instance119 {
+        display: block;
+        top: 10px;
+        left: 498px;
+        width: 484px;
+        height: 40px;
+        min-height: 40px;
+        min-width: 484px;
+    }
+
+    #wb_element_instance120 {
+        display: block;
+        top: 0;
+        left: 0;
+        width: 360px;
+        height: 110px;
+        min-height: 110px;
+        min-width: 360px;
+    }
+
+    #wb_element_instance120 > div {
+        width: 360px;
+        height: 110px;
+    }
+
+    #wb_element_instance121 {
+        display: block;
+        top: 17px;
+        left: 27px;
+        width: 300px;
+        height: 84px;
+        min-height: 84px;
+        min-width: 300px;
+    }
+
+    #wb_element_instance122 {
+        display: block;
+        top: 27px;
+        left: 900px;
+        width: 32px;
+        height: 32px;
+        min-height: 32px;
+        min-width: 32px;
+    }
+
+    #wb_element_instance122 img {
+        position: static;
+        top: 0;
+        left: 0;
+        width: 32px;
+        height: 32px;
+    }
+
+    #wb_element_instance123 {
+        display: block;
+        top: 27px;
+        left: 850px;
+        width: 32px;
+        height: 32px;
+        min-height: 32px;
+        min-width: 32px;
+    }
+
+    #wb_element_instance123 img {
+        position: static;
+        top: 0;
+        left: 0;
+        width: 32px;
+        height: 32px;
+    }
+
+    #wb_element_instance124 {
+        display: block;
+        top: 10px;
+        left: 50px;
+        width: 530px;
+        height: 30px;
+        min-height: 30px;
+        min-width: 530px;
+    }
+
+    #wb_element_instance125 {
+        display: block;
+        top: 10px;
+        left: 670px;
+        width: 110px;
+        height: 24px;
+        min-height: 24px;
+        min-width: 110px;
+    }
+
+    #wb_element_instance126 {
+        display: block;
+        top: 27px;
+        left: 950px;
+        width: 32px;
+        height: 32px;
+        min-height: 32px;
+        min-width: 32px;
+    }
+
+    #wb_element_instance126 img {
+        position: static;
+        top: 0;
+        left: 0;
+        width: 32px;
+        height: 32px;
+    }
+}
+
+@media(min-width:1200px) {
+    body,
+    .wb_sbg {
+        min-height: 2530px;
+        min-width: 992px;
+    }
+
+    .root {
+        width: 992px;
+        height: 2530px;
+        overflow: visible;
+    }
+
+    #wb_element_instance119 {
+        display: block;
+        top: 10px;
+        left: 498px;
+        width: 484px;
+        height: 40px;
+        min-height: 40px;
+        min-width: 484px;
+    }
+
+    #wb_element_instance120 {
+        display: block;
+        top: 0;
+        left: 0;
+        width: 360px;
+        height: 110px;
+        min-height: 110px;
+        min-width: 360px;
+    }
+
+    #wb_element_instance120 > div {
+        width: 360px;
+        height: 110px;
+    }
+
+    #wb_element_instance121 {
+        display: block;
+        top: 17px;
+        left: 27px;
+        width: 300px;
+        height: 84px;
+        min-height: 84px;
+        min-width: 300px;
+    }
+
+    #wb_element_instance122 {
+        display: block;
+        top: 27px;
+        left: 900px;
+        width: 32px;
+        height: 32px;
+        min-height: 32px;
+        min-width: 32px;
+    }
+
+    #wb_element_instance122 img {
+        position: static;
+        top: 0;
+        left: 0;
+        width: 32px;
+        height: 32px;
+    }
+
+    #wb_element_instance123 {
+        display: block;
+        top: 27px;
+        left: 850px;
+        width: 32px;
+        height: 32px;
+        min-height: 32px;
+        min-width: 32px;
+    }
+
+    #wb_element_instance123 img {
+        position: static;
+        top: 0;
+        left: 0;
+        width: 32px;
+        height: 32px;
+    }
+
+    #wb_element_instance124 {
+        display: block;
+        top: 10px;
+        left: 50px;
+        width: 530px;
+        height: 30px;
+        min-height: 30px;
+        min-width: 530px;
+    }
+
+    #wb_element_instance125 {
+        display: block;
+        top: 10px;
+        left: 670px;
+        width: 110px;
+        height: 24px;
+        min-height: 24px;
+        min-width: 110px;
+    }
+
+    #wb_element_instance126 {
+        display: block;
+        top: 27px;
+        left: 950px;
+        width: 32px;
+        height: 32px;
+        min-height: 32px;
+        min-width: 32px;
+    }
+
+    #wb_element_instance126 img {
+        position: static;
+        top: 0;
+        left: 0;
+        width: 32px;
+        height: 32px;
+    }
 }
