Accueil.html renomage

--- a/css/Accueil.css
+++ b/css/Accueil.css
@@ -154,7 +154,7 @@ body,
     height: 32px;
 }
 
-#wb_element_instance5 {
+#div_ecriture_nombasdepage {
     display: block;
     z-index: 182;
     top: 10px;
@@ -665,7 +665,7 @@ body,
     min-width: 750px;
 }
 
-#wb_element_instance29 {
+#div_trait_conseilsdevoyage {
     display: block;
     z-index: 92;
     top: 96px;
@@ -771,7 +771,7 @@ body,
         height: 32px;
     }
 
-    #wb_element_instance5 {
+    #div_ecriture_nombasdepage {
         display: block;
         top: 10px;
         left: 50px;
@@ -1106,7 +1106,7 @@ body,
         min-width: 750px;
     }
 
-    #wb_element_instance29 {
+    #div_trait_conseilsdevoyage {
         display: block;
         top: 96px;
         left: 0;
@@ -1199,7 +1199,7 @@ body,
         height: 32px;
     }
 
-    #wb_element_instance5 {
+    #div_ecriture_nombasdepage {
         display: block;
         top: 10px;
         left: 50px;
@@ -1534,7 +1534,7 @@ body,
         min-width: 750px;
     }
 
-    #wb_element_instance29 {
+    #div_trait_conseilsdevoyage {
         display: block;
         top: 96px;
         left: 0;
@@ -1627,7 +1627,7 @@ body,
         height: 32px;
     }
 
-    #wb_element_instance5 {
+    #div_ecriture_nombasdepage {
         display: block;
         top: 10px;
         left: 50px;
@@ -1962,7 +1962,7 @@ body,
         min-width: 750px;
     }
 
-    #wb_element_instance29 {
+    #div_trait_conseilsdevoyage {
         display: block;
         top: 96px;
         left: 0;
