--- a/css/A_Visiter.less
+++ b/css/A_Visiter.less
@@ -46,7 +46,7 @@ body,
     overflow: visible;
 }
 
-#wb_element_instance32 {
+#menu {
     display: block;
     z-index: 194;
     top: 10px;
@@ -57,25 +57,25 @@ body,
     min-width: 484px;
 }
 
-#wb_element_instance32 ul {
+#menu ul {
     border: 1px none #000000;
     background: transparent none repeat scroll left top;
 }
 
-#wb_element_instance32,
-#wb_element_instance32 ul {
+#menu,
+#menu ul {
     text-align: right;
 }
 
-#wb_element_instance32 ul ul {
+#menu ul ul {
     background: #2e2e2e none repeat scroll left top;
 }
 
-#wb_element_instance32 li {
+#menu li {
     margin: 10px 10px 10px 10px;
 }
 
-#wb_element_instance32 li a {
+#menu li a {
     padding: 5px 10px 5px 10px;
     border: 0 none #000000;
     text-decoration: none;
@@ -86,8 +86,8 @@ body,
     background: transparent none repeat scroll left top;
 }
 
-#wb_element_instance32 li:hover > a,
-#wb_element_instance32 li:focus > a {
+#menu li:hover > a,
+#menu li:focus > a {
     border: 0 none #000000;
     text-decoration: none;
     font: normal normal 13px Georgia,serif;
@@ -96,7 +96,7 @@ body,
     background: transparent none no-repeat scroll center top;
 }
 
-#wb_element_instance32 li.active > a {
+#menu li.active > a {
     border: 0 none #000000;
     text-decoration: none;
     font: normal normal 13px Georgia,serif;
@@ -105,7 +105,7 @@ body,
     background: transparent none no-repeat scroll center top;
 }
 
-#wb_element_instance33 {
+#logo_position {
     display: block;
     z-index: 182;
     top: 0;
@@ -116,7 +116,7 @@ body,
     min-width: 360px;
 }
 
-#wb_element_instance33 > div {
+#logo_position > div {
     width: 360px;
     height: 110px;
     border: 5px none #C0C0C0;
@@ -127,7 +127,7 @@ body,
     background: transparent;
 }
 
-#wb_element_instance34 {
+#logo {
     display: block;
     z-index: 186;
     top: 17px;
@@ -578,7 +578,7 @@ body,
         overflow: visible;
     }
 
-    #wb_element_instance32 {
+    #menu {
         display: block;
         top: 10px;
         left: 498px;
@@ -588,7 +588,7 @@ body,
         min-width: 484px;
     }
 
-    #wb_element_instance33 {
+    #logo_position {
         display: block;
         top: 0;
         left: 0;
@@ -598,12 +598,12 @@ body,
         min-width: 360px;
     }
 
-    #wb_element_instance33 > div {
+    #logo_position > div {
         width: 360px;
         height: 110px;
     }
 
-    #wb_element_instance34 {
+    #logo {
         display: block;
         top: 17px;
         left: 27px;
@@ -1025,7 +1025,7 @@ body,
         overflow: visible;
     }
 
-    #wb_element_instance32 {
+    #menu {
         display: block;
         top: 10px;
         left: 498px;
@@ -1035,7 +1035,7 @@ body,
         min-width: 484px;
     }
 
-    #wb_element_instance33 {
+    #logo_position {
         display: block;
         top: 0;
         left: 0;
@@ -1045,12 +1045,12 @@ body,
         min-width: 360px;
     }
 
-    #wb_element_instance33 > div {
+    #logo_position > div {
         width: 360px;
         height: 110px;
     }
 
-    #wb_element_instance34 {
+    #logo {
         display: block;
         top: 17px;
         left: 27px;
@@ -1472,7 +1472,7 @@ body,
         overflow: visible;
     }
 
-    #wb_element_instance32 {
+    #menu {
         display: block;
         top: 10px;
         left: 498px;
@@ -1482,7 +1482,7 @@ body,
         min-width: 484px;
     }
 
-    #wb_element_instance33 {
+    #logo_position {
         display: block;
         top: 0;
         left: 0;
@@ -1492,12 +1492,12 @@ body,
         min-width: 360px;
     }
 
-    #wb_element_instance33 > div {
+    #logo_position > div {
         width: 360px;
         height: 110px;
     }
 
-    #wb_element_instance34 {
+    #logo {
         display: block;
         top: 17px;
         left: 27px;
